force-app/main/default/objects/Integration_Config__c/Integration_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Integration Config</label>
</CustomObject>