force-app/main/default/objects/Integration_Config__c/fields/AuthTokenExtension__c.field-meta.xml
<CustomField>
    <fullName>AuthTokenExtension__c</fullName>
    <label>AuthTokenExtension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>