force-app/main/default/objects/Integration_Config__c/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <label>ClientSecret</label>
    <length>45</length>
    <type>Text</type>
</CustomField>