force-app/main/default/objects/Integration_Config__c/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <description>SSC-1617</description>
    <label>Countries</label>
    <type>TextArea</type>
</CustomField>