force-app/main/default/objects/Integration_Config__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>CountryCode</label>
    <type>TextArea</type>
</CustomField>