force-app/main/default/objects/Integration_Config__c/fields/Disable_Service__c.field-meta.xml
<CustomField>
    <fullName>Disable_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Switch to enable or disable the API/Services available in Salesforce.</description>
    <label>Disable Service</label>
    <type>Checkbox</type>
</CustomField>