force-app/main/default/objects/Integration_Config__c/fields/PlatformCode__c.field-meta.xml
<CustomField>
    <fullName>PlatformCode__c</fullName>
    <label>PlatformCode</label>
    <type>TextArea</type>
</CustomField>