force-app/main/default/objects/Integration_Config__c/fields/RecordTypeDName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDName__c</fullName>
    <label>RecordTypeDName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>