force-app/main/default/objects/Integration_Config__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <label>Timeout</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>